
* The value of 'SEND_TO_UE' in the DIAMETER Gx dictionary for Packet-Filter-Usage AVP is 0 instead of 1. (ws-buglink:9126[])

* Bssgp =>  SGSN-INVOKE-TRACE use the wrong function... (ws-buglink:9157[])

* Files with pcap-ng Simple Packet Blocks can't be read.
(ws-buglink:9200[])

* Wireshark lua dissector unable to load for media_type=application/octet-stream. (ws-buglink:9296[])

* DCERPC data_blobs are not correctly dissected when NDR64 encoding is used. (ws-buglink:9301[])

* multiple PDU in the same DCERPC packet are not correctly decrypted. (ws-buglink:9302[])

* The tshark summary line doesn't display the frame number or displays it sporadically. (ws-buglink:9317[])

* Fix dissection of PTP Management messages. (ws-buglink:9262[])

=== New and Updated Features

There are no new features in this release.

=== New Protocol Support

There are no new protocols in this release.

=== Updated Protocol Support

--sort-and-group--

BSSGP
DCERPC
DCERPC NT
DIAMETER
Ethernet
EtherNet/IP
IEEE 802.15.4
NBAP
OpenWire
SIP
WiMax

--sort-and-group--

=== New and Updated Capture File Support

--sort-and-group--

.

--sort-and-group--

=== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the http://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Known Problems

Dumpcap might not quit if Wireshark or TShark crashes.
(ws-buglink:1419[])
